# keriguard

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  test.yml
scripts/: README.md  add-watchers.sh  issue.sh  setup.sh
scripts/data/: keriguard.yaml
src/keriguard/app/cli/: kg.py
src/keriguard/app/cli/commands/: generate.py
src/keriguard/app/cli/commands/guardian/: connect.py  start.py  up.py
src/keriguard/app/cli/commands/interface/: create.py  publish.py
src/keriguard/app/cli/commands/peer/: add.py
src/keriguard/app/cli/commands/peers/: connect.py  list.py  publish.py
src/keriguard/app/cli/commands/vc/: process.py
src/keriguard/app/sentinel/: config.py  handler.py  main.py
src/keriguard/app/sentinel/handlers/: cred_handler.py  kel_handler.py  tel_handler.py
src/keriguard/app/sentinel/services/: cred_service.py  kel_service.py  tel_service.py
src/keriguard/core/: __init__.py  initializing.py  kering.py  querying.py  systeming.py  wireguarding.py
src/keriguard/db/: basing.py
tests/keriguard/app/sentinel/: conftest.py
tests/keriguard/core/: test_systeming.py  test_wireguarding.py
