# $ python setup.py register sdist upload

# First Time register project on pypi
# https://pypi.org/manage/projects/
#
#
# Pypi Release
# $ pip3 install twine
#
# $ python3 -m build
# $ twine upload dist/*

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keriguard"
version = "0.0.1"
description = "KERI managed Wireguard."
readme = "README.md"
requires-python = ">=3.13.3"
authors = [
    {name = "Phil Feairheller", email = "phil@healthKERI.com"}
]

dependencies = [
    "keri~=1.3.4",
    "kept @git+https://git@github.com/healthKERI/kept.git@main",
    "multicommand>=1.0.0",
    'cbor>=1.0.0',
    'httpx>=0.28.1',
    "requests>=2.32.4",
    'requests_toolbelt==1.0.0',
    'cryptography>=42.0.0',
    "dbus-fast==5.0.21"
]

[project.optional-dependencies]
# Sentinel framework handler (event-driven Wireguard management)
sentinel-handler = [
    "sentinel @git+https://git@github.com/healthKERI/sentinel",
]

# Full application stack with database
app = [
    "keriguard[sentinel-handler]",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0"
]

# Development dependencies
dev = [
    "keriguard[app]",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.0.0",
]

[dependency-groups]
dev = []
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

# Sentinel handler tests (requires sentinel-handler extra)
test-sentinel = [
    { include-group = "test" },
]

[project.urls]
Homepage = "https://github.com/healthKERI/keriguard"

[project.scripts]
kg = "keriguard.app.cli.kg:main"
kg-sentinel = "keriguard.app.sentinel.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

